ws client is now a rx handler
Signed-off-by: Philipp Etschel <philipp.etschel@ch.bosch.com>